# CuteEdit

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  _bitbucket-pipelines.yml  bitbucket-pipelines.yml  main.cpp  prova_salvataggio.txt
forms/: CMakeLists.txt  MainWindow.ui
include/: CMakeLists.txt  MainWindow.h  SettingGroup.h  Settings.h  TemplateHandler.h  TypeDisplayer.h  qt_utils.h
include/fwd/: SettingGroup.h
src/: CMakeLists.txt  MainWindow.cpp  SettingGroup.cpp  Settings.cpp  TemplateHandler.cpp
